fixed overlapping block

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 .third-container-b {
   padding-left: -80px;
   padding-left: 15px;
-  height: 90%;
+  height: 80%;
   background-color: #27384c;
   border-radius: 20px;
   color: #ffffff;
